# Core

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  Makefile.in  README.md  SECURITY.md  configure  configure.ac
.github/: ISSUE_TEMPLATE.md
autom4te.cache/: output.1  output.3  requests  traces.0  traces.2  traces.3
build_msvc/: bitcoin_config.h  common.init.vcxproj
contrib/: README.md  install_db4.sh
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  Makefile.in  plumora-cli.1  plumora-qt.1  plumora-tx.1  plumora-wallet.1  plumorad.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  banman.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  coins.h  compressor.h  core_read.cpp  flatfile.h  init.cpp  init.h  logging.cpp  logging.h  miner.cpp  miner.h  net.cpp  net.h  net_permissions.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  outputtype.cpp  pow.cpp  (+16 more)
src/rpc/: net.cpp  (+8 more)
test/: README.md  (+1 more)
(+233 files in other folders)
